force-app/main/default/objects/Release_Playbook_Sub_Item__c/Release_Playbook_Sub_Item__c.object-meta.xml
<CustomObject>
    <label>Release Playbook Sub Item</label>
    <nameField>
        <displayFormat>RPSI-{000000}</displayFormat>
        <label>Release Playbook Sub Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Playbook Sub Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>