force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipLabel>Release Playbook Sub Items</relationshipLabel>
    <relationshipName>Release_Playbook_Sub_Items</relationshipName>
    <type>Lookup</type>
</CustomField>