force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Deployment_Step__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Step</label>
    <referenceTo>copado__Step__c</referenceTo>
    <relationshipLabel>Release Playbook Sub Items</relationshipLabel>
    <relationshipName>Release_Playbook_Sub_Items</relationshipName>
    <type>Lookup</type>
</CustomField>