force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Previous_SCA__c.field-meta.xml
<CustomField>
    <fullName>Previous_SCA__c</fullName>
    <label>Previous SCA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>