force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>copado__Promotion__c</referenceTo>
    <relationshipName>Release_Playbook_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>