force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Release_Playbook_Item__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook_Item__c</fullName>
    <label>Release Playbook Item</label>
    <referenceTo>Release_Playbook_Item__c</referenceTo>
    <relationshipLabel>Release Playbook Sub Items</relationshipLabel>
    <relationshipName>Release_Playbook_Sub_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>