force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/SCA_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>SCA_Execution_Time__c</fullName>
    <label>SCA Execution Time</label>
    <type>DateTime</type>
</CustomField>