force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Snapshot_Commit__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Commit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snapshot Commit</label>
    <referenceTo>copado__Git_Org_Commit__c</referenceTo>
    <relationshipLabel>Release Playbook Sub Items</relationshipLabel>
    <relationshipName>Release_Playbook_Sub_Items</relationshipName>
    <type>Lookup</type>
</CustomField>