force-app/main/default/objects/Release_Playbook_Sub_Item__c/fields/Static_Code_Analysis_Result__c.field-meta.xml
<CustomField>
    <fullName>Static_Code_Analysis_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Static Code Analysis Result</label>
    <referenceTo>copado__Static_Code_Analysis_Result__c</referenceTo>
    <relationshipLabel>Release Playbook Sub Items</relationshipLabel>
    <relationshipName>Release_Playbook_Sub_Items</relationshipName>
    <type>Lookup</type>
</CustomField>